<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_rent"
        android:icon="@drawable/ic_outline_format_list_bulleted"
        android:title="@string/title_booking" />

    <item
        android:id="@+id/navigation_wishlist"
        android:icon="@drawable/ic_outline_favorite"
        android:title="@string/title_wishlist" />

    <item
        android:id="@+id/navigation_chatlist"
        android:icon="@drawable/ic_chat_bubble_outline"
        android:title="@string/title_chatlist" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_outline_person"
        android:title="@string/title_profile" />

</menu>