<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.farid.riaurental.UI.tenant.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_owner_home" />

    <fragment
        android:id="@+id/navigation_rent"
        android:name="com.farid.riaurental.UI.tenant.booking.BookingFragment"
        android:label="@string/title_rent"
        tools:layout="@layout/fragment_tenant_booking" />

    <fragment
        android:id="@+id/navigation_wishlist"
        android:name="com.farid.riaurental.UI.tenant.wishlist.WishlistFragment"
        android:label="@string/title_wishlist"
        tools:layout="@layout/fragment_tenant_wishlist" />

    <fragment
        android:id="@+id/navigation_chatlist"
        android:name="com.farid.riaurental.UI.chatlist.ChatlistFragment"
        android:label="@string/title_chatlist"
        tools:layout="@layout/fragment_chatlist" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.farid.riaurental.UI.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
</navigation>